Third-party can be declared in the projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ project(knp VERSION "${KNP_VERSION}"
         HOMEPAGE_URL "https://neuro.kaspersky.ru/neyromorfnye-tekhnologii/")
 
 set(KNP_BOOST_MIN_VERSION "1.74.0")
+set(KNP_ROOT_DIR "${PROJECT_SOURCE_DIR}" CACHE STRING "KNP root directory")
 
 
 #
@@ -122,20 +123,6 @@ add_third_party("gh:HDFGroup/hdf5#hdf5_1.14.4"
                     "HDF5_NO_PACKAGES ON")
 
 add_third_party("gh:p-ranav/csv2@0.1")
-add_third_party(NAME "ZeroMQ"
-                GITHUB_REPOSITORY "zeromq/libzmq"
-                VERSION "4.3.5"
-                OPTIONS
-                    "WITH_DOCS OFF"
-                    "BUILD_TESTS OFF"
-                    "ENABLE_CPACK OFF")
-add_third_party("gh:zeromq/cppzmq@4.10.0")
-
-add_third_party("gh:google/flatbuffers@24.3.25"
-                OPTIONS
-                    "FLATBUFFERS_BUILD_TESTS OFF"
-                    "FLATBUFFERS_BUILD_CPP17 ON")
-
 add_third_party("gh:simdjson/simdjson@3.9.1")
 add_third_party("gh:intel/pcm#202403")
 
