--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,10 +31,12 @@ if (NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     set(KNP_BUILD_TESTS_DEFAULT OFF)
     set(KNP_BUILD_DOCUMENTATION_DEFAULT OFF)
     set(KNP_BUILD_EXAMPLES_DEFAULT OFF)
+    set(KNP_MAINTAINER_BUILD OFF)
 else()
     set(KNP_BUILD_TESTS_DEFAULT ON)
     set(KNP_BUILD_DOCUMENTATION_DEFAULT ON)
     set(KNP_BUILD_EXAMPLES_DEFAULT ON)
+    set(KNP_PYTHON_BUILD_WHEEL_DEFAULT OFF)
 endif()
 
 if (CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)")
@@ -47,6 +49,7 @@ endif()
 
 if(KNP_MAINTAINER_BUILD)
     set(KNP_COVERAGE_DEFAULT OFF)
+    set(KNP_PYTHON_BUILD_WHEEL_DEFAULT ON)
 else()
     set(KNP_COVERAGE_DEFAULT ON)
 
@@ -58,12 +61,24 @@ else()
     endif()
 endif()
 
-option(KNP_BUILD_TESTS "Build tests" ${KNP_BUILD_TESTS_DEFAULT})
+find_program(_STUBGEN stubgen NO_CACHE)
+
+if("${_STUBGEN}" STREQUAL "_STUBGEN-NOTFOUND")
+    message(WARNING "MyPy stubgen was not found! Please install MyPy (see requirements.txt)! Python framework build will be disabled.")
+    set(KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT OFF)
+    set(KNP_PYTHON_BUILD_WHEEL_DEFAULT OFF)
+else()
+    set(KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT ON)
+endif()
+
 option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" ${KNP_BUILD_DOCUMENTATION_DEFAULT})
 option(KNP_BUILD_EXAMPLES "Build usage examples" ${KNP_BUILD_EXAMPLES_DEFAULT})
-option(KNP_MAINTAINER_BUILD "Build for maintainer, but not for the development purposes" OFF)
-option(KNP_ENABLE_COVERAGE "Enable coverage checking" ${KNP_COVERAGE_DEFAULT})
+option(KNP_BUILD_TESTS "Build tests" ${KNP_BUILD_TESTS_DEFAULT})
 option(KNP_ENABLE_AVX "Enable AVX and other CPU-specific extensions in the release build" ${KNP_ENABLE_AVX_DEFAULT})
+option(KNP_ENABLE_COVERAGE "Enable coverage checking" ${KNP_COVERAGE_DEFAULT})
+option(KNP_MAINTAINER_BUILD "Build for maintainer, but not for the development purposes" OFF)
+option(KNP_PYTHON_BUILD_WHEEL "Build WHL package for the Python framework" ${KNP_PYTHON_BUILD_WHEEL_DEFAULT})
+option(KNP_PYTHON_FRAMEWORK_BUILD "Build KNP Python framework" ${KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT})
 
 mark_as_advanced(KNP_MAINTAINER_BUILD)
 mark_as_advanced(KNP_ENABLE_COVERAGE)
