--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+#
+# Requirements for build.
+#
+
 clang-tidy==14.0.6
 gcovr==5.2
+mypy==1.8.0
+mypy-extensions==1.0.0
 # black==19.10b0
 pre-commit==2.20.0
 pylint==2.14.5
