--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -23,8 +23,9 @@ source_group(headers FILES ${${PROJECT_NAME}_headers} REGULAR_EXPRESSION "includ
 knp_add_library("${PROJECT_NAME}-core"
     BOTH
     impl/backend_loader.cpp
-    impl/data_storage_json.cpp
-    impl/data_storage_hdf5.cpp
+    impl/storage/native/data_storage_common.cpp
+    impl/storage/native/data_storage_json.cpp
+    impl/storage/native/data_storage_hdf5.cpp
     impl/network.cpp
     impl/model.cpp
     impl/model_executor.cpp
