Doxygen warning add

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ else()
     if(KNP_BUILD_DOCUMENTATION_DEFAULT)
         find_package(Doxygen OPTIONAL_COMPONENTS dot)
         if(NOT DOXYGEN_FOUND)
+            message(WARNING "Doxygen was not found! Documentation build will be disabled by default.")
             set(KNP_BUILD_DOCUMENTATION_DEFAULT OFF)
         endif()
     endif()
