--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -70,13 +70,13 @@ repos:
       #   - With a cache tidy is faster.
       #   - I don't know where is the real build directory.
       #   - Hook implementation with a cache is buggy now.
-      #- id: clang-tidy
-      #  name: clang-tidy
-      #  args: ["--config-file=knp/.clang-tidy",  "-extra-arg-before=-xc++", "-extra-arg=-std=c++17", "-p=build"]
-      #  entry: tools/hooks/clang_tidy.py
-      #  description: Find warnings/errors in C, C++, and Objective-C code
-      #  types_or: [c, c++, c#, objective-c]
-      #  language: python
+      - id: clang-tidy
+        name: clang-tidy
+        args: ["--config-file=knp/.clang-tidy",  "-extra-arg-before=-xc++", "-extra-arg=-std=c++17", "-p=build"]
+        entry: tools/hooks/clang_tidy.py
+        description: Find warnings/errors in C, C++, and Objective-C code
+        types_or: [c, c++, c#, objective-c, cuda]
+        language: python
 #      - id: oclint
 #        name: oclint
 #        entry: tools/hooks/oclint.py
