--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@
 # Requirements for build.
 #
 
-clang-tidy==14.0.6
+clang-tidy==18.1.1
 gcovr==5.2
 mypy==1.8.0
 mypy-extensions==1.0.0
 # black==19.10b0
 pre-commit==2.20.0
 pylint==2.14.5
-requests==2.23.0
+pytest==7.4.4
+setuptools==69.0.3
+# requests==2.26.0
 types-requests==2.28.11.7
+wheel==0.42.0
