--- a/knp/backends/cpu/thread_pool/CMakeLists.txt
+++ b/knp/backends/cpu/thread_pool/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(knp-thread-pool-library VERSION "${KNP_VERSION}" LANGUAGES C CXX)
 
-find_package(Boost 1.66.0 REQUIRED)
+find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED)
 
 include(clang-tidy)
 include(knp-functions)
@@ -15,12 +15,10 @@ include(knp-functions)
 file(GLOB_RECURSE ${PROJECT_NAME}_headers include/knp/backends/thread_pool/*.h)
 
 knp_add_library("${PROJECT_NAME}"
-        STATIC
-
-        impl/thread_pool_context.cpp
-
-        ${${PROJECT_NAME}_headers}
-        )
+    STATIC
+    impl/thread_pool_context.cpp
+    ${${PROJECT_NAME}_headers}
+)
 add_library(KNP::Backends::CPU::ThreadPool ALIAS "${PROJECT_NAME}")
 
 source_group(source REGULAR_EXPRESSION "impl/.*")
