--- a/knp/meta-library/CMakeLists.txt
+++ b/knp/meta-library/CMakeLists.txt
@@ -16,15 +16,16 @@ include(GNUInstallDirs)
 include(clang-tidy)
 include(knp-functions)
 
-find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED)
+if(NOT TARGET Boost::headers)
+    find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED)
+endif()
 
 file(GLOB_RECURSE ${PROJECT_NAME}_headers include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}/*.h)
 source_group(headers FILES ${${PROJECT_NAME}_headers} REGULAR_EXPRESSION "include/.*")
 
 add_library("${PROJECT_NAME}"
     INTERFACE
-    ${${PROJECT_NAME}_headers}
-)
+    ${${PROJECT_NAME}_headers})
 
 add_library(KNP::Meta ALIAS "${PROJECT_NAME}")
 
@@ -36,8 +37,7 @@ target_include_directories("${PROJECT_NAME}" INTERFACE ${Boost_INCLUDE_DIRS})
 
 install(TARGETS "${PROJECT_NAME}"
         EXPORT "${PROJECT_NAME}"
-        COMPONENT "framework-dev"
-        )
+        COMPONENT "framework-dev")
 
 install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
         COMPONENT "framework-dev"
