--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ include_guard(GLOBAL)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
+include(CMakeDependentOption)
 include(third-party)
 include(version)
 
@@ -27,15 +28,7 @@ set(KNP_ROOT_DIR "${PROJECT_SOURCE_DIR}" CACHE STRING "KNP root directory")
 
 # Build not from source directory, possible via add_subdirectory().
 if (NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
-    set(KNP_BUILD_TESTS_DEFAULT OFF)
-    set(KNP_BUILD_DOCUMENTATION_DEFAULT OFF)
-    set(KNP_BUILD_EXAMPLES_DEFAULT OFF)
-    set(KNP_MAINTAINER_BUILD OFF)
-else()
-    set(KNP_BUILD_TESTS_DEFAULT ON)
-    set(KNP_BUILD_DOCUMENTATION_DEFAULT ON)
-    set(KNP_BUILD_EXAMPLES_DEFAULT ON)
-    set(KNP_PYTHON_BUILD_WHEEL_DEFAULT OFF)
+    set(KNP_BUILD_AUTONOMOUS TRUE)
 endif()
 
 if (CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)")
@@ -47,16 +40,10 @@ else()
 endif()
 
 if(KNP_MAINTAINER_BUILD)
-#    set(KNP_ENABLE_COVERAGE_DEFAULT OFF)
-    set(KNP_PYTHON_BUILD_WHEEL_DEFAULT ON)
-else()
-#    set(KNP_ENABLE_COVERAGE_DEFAULT ON)
-
-    if(KNP_BUILD_DOCUMENTATION_DEFAULT)
+    if(KNP_BUILD_AUTONOMOUS)
         find_package(Doxygen OPTIONAL_COMPONENTS dot)
         if(NOT DOXYGEN_FOUND)
             message(WARNING "Doxygen was not found! Documentation build will be disabled by default.")
-            set(KNP_BUILD_DOCUMENTATION_DEFAULT OFF)
         endif()
     endif()
 endif()
@@ -66,20 +53,19 @@ find_program(_STUBGEN stubgen NO_CACHE)
 if("${_STUBGEN}" STREQUAL "_STUBGEN-NOTFOUND")
     message(WARNING "MyPy stubgen was not found! Please install MyPy (see requirements.txt)! Python framework build will be disabled.")
     set(KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT OFF)
-    set(KNP_PYTHON_BUILD_WHEEL_DEFAULT OFF)
 else()
     set(KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT ON)
 endif()
 
-option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" ${KNP_BUILD_DOCUMENTATION_DEFAULT})
-option(KNP_BUILD_EXAMPLES "Build usage examples" ${KNP_BUILD_EXAMPLES_DEFAULT})
-option(KNP_BUILD_TESTS "Build tests" ${KNP_BUILD_TESTS_DEFAULT})
-option(KNP_ENABLE_AVX "Enable AVX and other CPU-specific extensions in the release build" ${KNP_ENABLE_AVX_DEFAULT})
+cmake_dependent_option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" ON "KNP_BUILD_AUTONOMOUS;DOXYGEN_FOUND" OFF)
+cmake_dependent_option(KNP_BUILD_EXAMPLES "Build usage examples" ON "KNP_BUILD_AUTONOMOUS" OFF)
+cmake_dependent_option(KNP_BUILD_TESTS "Build tests" ON "KNP_BUILD_AUTONOMOUS" OFF)
+cmake_dependent_option(KNP_ENABLE_AVX "Enable AVX and other CPU-specific extensions in the release build" ON "KNP_ENABLE_AVX_DEFAULT" OFF)
 option(KNP_ENABLE_COVERAGE "Enable coverage checking" OFF)
 option(KNP_IPO_ENABLED "Enable interprocedural optimization" ON)
 option(KNP_MAINTAINER_BUILD "Build for maintainer, but not for the development purposes" OFF)
-option(KNP_PYTHON_BUILD_WHEEL "Build WHL package for the Python framework" ${KNP_PYTHON_BUILD_WHEEL_DEFAULT})
-option(KNP_PYTHON_FRAMEWORK_BUILD "Build KNP Python framework" ${KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT})
+cmake_dependent_option(KNP_PYTHON_FRAMEWORK_BUILD "Build KNP Python framework" ON "KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT" OFF)
+cmake_dependent_option(KNP_PYTHON_BUILD_WHEEL "Build WHL package for the Python framework" ON "KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT;KNP_MAINTAINER_BUILD" OFF)
 
 mark_as_advanced(KNP_MAINTAINER_BUILD)
 mark_as_advanced(KNP_ENABLE_COVERAGE)
@@ -107,7 +93,7 @@ if (KNP_ENABLE_AVX)
     endif()
 
     set(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE})
-    add_definitions(-include x86intrin.h)
+    add_compile_options(-include x86intrin.h)
     # -include bits/stdc++.h
 endif()
 
