--- a/knp/neuron-traits-library/CMakeLists.txt
+++ b/knp/neuron-traits-library/CMakeLists.txt
@@ -10,6 +10,8 @@ project(knp-neuron-traits VERSION "${KNP_VERSION}" LANGUAGES C CXX
 
 include(knp-functions)
 
+find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED)
+
 set(${PROJECT_NAME}_PUBLIC_INCLUDE_DIR "knp/neuron-traits")
 
 file(GLOB_RECURSE ${PROJECT_NAME}_headers include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}/*.h)
@@ -21,12 +23,11 @@ add_library("${PROJECT_NAME}"
 
 add_library(KNP::Neuron::Traits ALIAS "${PROJECT_NAME}")
 
-
 target_include_directories("${PROJECT_NAME}" INTERFACE
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
         "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 
-target_link_libraries("${PROJECT_NAME}" INTERFACE KNP::Meta)
+target_link_libraries("${PROJECT_NAME}" INTERFACE Boost::headers KNP::Meta)
 
 install(TARGETS "${PROJECT_NAME}"
         EXPORT "${PROJECT_NAME}"
