Trying to fix linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,10 @@ project(knp VERSION "${KNP_VERSION}"
 
 set(KNP_BOOST_MIN_VERSION "1.74.0")
 set(KNP_ROOT_DIR "${PROJECT_SOURCE_DIR}" CACHE STRING "KNP root directory")
-set(BOOST_USE_MULTITHREADED ON)
-set(BOOST_USE_STATIC_LIBS ON)
-set(BOOST_USE_STATIC_RUNTIME ON)
-set(BOOST_ALL_DYN_LINK OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_LIBS ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+set(Boost_ALL_DYN_LINK OFF)
 
 
 #
@@ -89,8 +89,8 @@ message(STATUS "KNP_ENABLE_AVX = ${KNP_ENABLE_AVX}")
 message(STATUS "KNP_ENABLE_COVERAGE = ${KNP_ENABLE_COVERAGE}")
 message(STATUS "KNP_IPO_ENABLED = ${KNP_IPO_ENABLED}")
 message(STATUS "KNP_MAINTAINER_BUILD = ${KNP_MAINTAINER_BUILD}")
-message(STATUS "KNP_PYTHON_BUILD_WHEEL = ${KNP_PYTHON_BUILD_WHEEL}")
 message(STATUS "KNP_PYTHON_FRAMEWORK_BUILD = ${KNP_PYTHON_FRAMEWORK_BUILD}")
+message(STATUS "KNP_PYTHON_BUILD_WHEEL = ${KNP_PYTHON_BUILD_WHEEL}")
 
 if (KNP_ENABLE_AVX)
     message(STATUS "AVX enabled.")
