--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -20,10 +20,12 @@ file(GLOB_RECURSE ${PROJECT_NAME}_headers include/${${PROJECT_NAME}_PUBLIC_INCLU
 source_group(source REGULAR_EXPRESSION "impl/.*")
 source_group(headers FILES ${${PROJECT_NAME}_headers} REGULAR_EXPRESSION "include/.*")
 
-if (TARGET HDF5::HDF5)
-    set(HDF5_LIB HDF5::HDF5)
-elseif (TARGET hdf5-static)
+if (TARGET hdf5-static)
+    message(STATUS "Using static HDF5 library")
     set(HDF5_LIB hdf5-static)
+elseif (TARGET HDF5::HDF5)
+    message(STATUS "Using dynamic HDF5 library")
+    set(HDF5_LIB HDF5::HDF5)
 else()
     message(FATAL_ERROR "HDF5 library was not found")
 endif()
