--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,15 +67,15 @@ else()
     set(KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT ON)
 endif()
 
-cmake_dependent_option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" ON "KNP_BUILD_AUTONOMOUS;DOXYGEN_FOUND" OFF)
-cmake_dependent_option(KNP_BUILD_EXAMPLES "Build usage examples" ON "KNP_BUILD_AUTONOMOUS" OFF)
-cmake_dependent_option(KNP_BUILD_TESTS "Build tests" ON "KNP_BUILD_AUTONOMOUS" OFF)
-cmake_dependent_option(KNP_ENABLE_AVX "Enable AVX and other CPU-specific extensions in the release build" ON "KNP_ENABLE_AVX_DEFAULT" OFF)
+cmake_dependent_option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" ${KNP_BUILD_AUTONOMOUS} "DOXYGEN_FOUND" OFF)
+option(KNP_BUILD_EXAMPLES "Build usage examples" ${KNP_BUILD_AUTONOMOUS})
+option(KNP_BUILD_TESTS "Build tests" ${KNP_BUILD_AUTONOMOUS})
+option(KNP_ENABLE_AVX "Enable AVX and other CPU-specific extensions in the release build" ${KNP_ENABLE_AVX_DEFAULT})
 option(KNP_ENABLE_COVERAGE "Enable coverage checking" OFF)
 option(KNP_IPO_ENABLED "Enable interprocedural optimization" ON)
 option(KNP_MAINTAINER_BUILD "Build for maintainer, but not for the development purposes" OFF)
 cmake_dependent_option(KNP_PYTHON_FRAMEWORK_BUILD "Build KNP Python framework" ON "KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT" OFF)
-cmake_dependent_option(KNP_PYTHON_BUILD_WHEEL "Build WHL package for the Python framework" ON "KNP_PYTHON_FRAMEWORK_BUILD;KNP_MAINTAINER_BUILD" OFF)
+cmake_dependent_option(KNP_PYTHON_BUILD_WHEEL "Build WHL package for the Python framework" ${KNP_MAINTAINER_BUILD} "KNP_PYTHON_FRAMEWORK_BUILD" OFF)
 
 mark_as_advanced(KNP_MAINTAINER_BUILD)
 mark_as_advanced(KNP_ENABLE_COVERAGE)
