--- a/examples/arni-save-load/CMakeLists.txt
+++ b/examples/arni-save-load/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.25)
 project(arni-save-load)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_executable(arni-save-load main.cpp)
 target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::BaseFramework::Core)
