--- a/knp/tests/CMakeLists.txt
+++ b/knp/tests/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.25)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(knp-tester VERSION "${KNP_VERSION}" LANGUAGES CXX
         DESCRIPTION "Kaspersky Neuromorphic Platform tester and tests")
@@ -26,38 +28,23 @@ file(GLOB_RECURSE COMMON_SOURCE CONFIGURE_DEPENDS
 
 add_executable("${PROJECT_NAME}" ${COMMON_SOURCE} tester.cpp utility.cpp)
 
-
-#file(GLOB BACKENDS LIST_DIRECTORIES yes "${CMAKE_CURRENT_SOURCE_DIR}/../include/snn-library/backends/*")
-
-#foreach(BACKEND ${BACKENDS})
-#    get_filename_component(BACKEND "${BACKEND}" NAME)
-#    file(GLOB TEST_BACKEND_SOURCE ${BACKEND}/*.cpp ${BACKEND}/*.h)
-#
-#    string(TOUPPER "${BACKEND}" BE_UPPER)
-#
-#    if(NOT "${BUILD_${BE_UPPER}_BACKEND}")
-#        message(STATUS "Tests for the back-end \"${BE_UPPER}\" will not be built...")
-#        continue()
-#    endif()
-#
-#    message(STATUS "Tests for the back-end \"${BE_UPPER}\" will be built.")
-#    add_executable("${PROJECT_NAME}-${BACKEND}" ${COMMON_SOURCE} ${TEST_BACKEND_SOURCE} ../include/snn-library/utilities/network_load.h cpu/network_file_test.cpp common/net_from_csv_test.cpp)
-#
-#
-#    # target_compile_options("${PROJECT_NAME}-${BACKEND}" PRIVATE)
-#    target_link_libraries("${PROJECT_NAME}-${BACKEND}" PRIVATE "snn_backend_${BACKEND}")
-#
-#
-#endforeach()
-
 target_include_directories("${PROJECT_NAME}"
     PRIVATE "${CMAKE_CURRENT_LIST_DIR}/common"
     PRIVATE "${GTEST_DIR}/googletest/include"
     PRIVATE "${GTEST_DIR}/googlemock/include"
 )
 
-target_link_libraries("${PROJECT_NAME}" PRIVATE gtest gtest_main spdlog HighFive)
-target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::Core KNP::BaseFramework::Core KNP::Backends::CPUSingleThreaded KNP::Backends::CPUMultiThreaded)
+if (TARGET HDF5::HDF5)
+    set(HDF5_LIB HDF5::HDF5)
+elseif (TARGET hdf5-static)
+    set(HDF5_LIB hdf5-static)
+else()
+    message(FATAL_ERROR "HDF5 library was not found")
+endif()
+
+target_link_libraries("${PROJECT_NAME}" PRIVATE gtest gtest_main spdlog::spdlog HighFive ${HDF5_LIB})
+target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::BaseFramework::Core KNP::Backends::CPUSingleThreaded KNP::Backends::CPUMultiThreaded
+        KNP::Devices::CPUStatic)
 target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::Backends::CPU::ThreadPool)
 
 if(KNP_ENABLE_COVERAGE)
@@ -75,7 +62,6 @@ gtest_discover_tests("${PROJECT_NAME}"
     WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
     PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
 )
-
 
 if(KNP_ENABLE_COVERAGE)
     message(STATUS "Coverage enabled")
@@ -116,9 +102,11 @@ if(KNP_ENABLE_COVERAGE)
     endif()
 endif()
 
+#[[
 add_custom_target(test_memcheck
     COMMAND ${CMAKE_CTEST_COMMAND}
         --force-new-ctest-process --test-action memcheck
         --rerun-failed --output-on-failure
     COMMAND cat "${CMAKE_BINARY_DIR}/Testing/Temporary/MemoryChecker.*.log"
     WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/data")
+]]
