--- a/examples/save-load-networks/CMakeLists.txt
+++ b/examples/save-load-networks/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.25)
 project(save-load-networks)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_executable("${PROJECT_NAME}" main.cpp)
 set(EXTLIB_FROM_SUBMODULES ON)
