--- a/examples/simple-network/CMakeLists.txt
+++ b/examples/simple-network/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.25)
 project(simple-network)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 if (NOT TARGET KNP::BaseFramework::Core)
     find_package(knp-framework REQUIRED)
