--- a/knp/synapse-traits-library/CMakeLists.txt
+++ b/knp/synapse-traits-library/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.25)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(knp-synapse-traits VERSION "${KNP_VERSION}" LANGUAGES C CXX
